We have working state access even after restarting Visual Studio
This should work on seperate machines as well.
Also we have decoupled many of the classes that were all bundled within
the AIEngine files.

--- a/Source/SSBAI/SSBAI.vcxproj.filters
+++ b/Source/SSBAI/SSBAI.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="AiEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="State.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +48,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AiEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="State.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
