--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.swp
+Debug/
+Release/
+Source/Project64/Glide64_SMASH_BROTHERS_01.png
+Source/Project64/Glide64_SMASH_BROTHERS_02.png
+Source/SSBAI/Release/
+Source/Source - Shortcut.lnk
+bin/
+
 *.aps
 *.ncb
 *.opensdf
