Have action working -- right now we just perform random actions
Actions are for player 1 only right now

--- a/Source/SSBAI/SSBAI.vcxproj
+++ b/Source/SSBAI/SSBAI.vcxproj
@@ -147,6 +147,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Action.h" />
     <ClInclude Include="AiEngine.h" />
     <ClInclude Include="SSBAI.h" />
     <ClInclude Include="State.h" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Action.cpp" />
     <ClCompile Include="AiEngine.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
