Added an experience class which is just a transition in the system.
This will be a part of the replay memory. Our AI agent (the deep q
network) will learn from experiences.

--- a/Source/SSBAI/SSBAI.vcxproj
+++ b/Source/SSBAI/SSBAI.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Action.h" />
     <ClInclude Include="AiEngine.h" />
+    <ClInclude Include="Experience.h" />
     <ClInclude Include="SSBAI.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="stdafx.h" />
@@ -172,6 +173,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Experience.cpp" />
     <ClCompile Include="SSBAI.cpp" />
     <ClCompile Include="State.cpp" />
     <ClCompile Include="stdafx.cpp">
