--- a/Source/SSBAI/SSBAI.vcxproj.filters
+++ b/Source/SSBAI/SSBAI.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Action.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Experience.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Action.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Experience.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
