--- a/Source/SSBAI/SSBAI.vcxproj
+++ b/Source/SSBAI/SSBAI.vcxproj
@@ -117,7 +117,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>Use</PrecompiledHeader>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;SSBAI_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
